# function-pipes

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: auto_publish.yml  setup.yml  test.yml
script/: test
src/function_pipes/: __init__.py  pipes.jinja-py
src/function_pipes/with_paramspec/: function_pipes.py
src/function_pipes/without_paramspec/: function_pipes.py
tests/: test_bridge.py  test_errors.py  test_fast.py  test_function_pipes.py  test_functional_equiv.py  test_meta.py  test_speed.py
typesafety/: pipetype.py  quickstart.py
