[tool.poetry]
name = "function-pipes"
version = "0.1.1"
description = "Typed python equivalent for R pipes."
authors = ["Alex Parsons <alex@alexparsons.co.uk>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ajparsons/function-pipes"
repository = "https://github.com/ajparsons/function-pipes"
include = [
    "LICENSE.md",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pylint = "^2.12.2"
black = "^22.3.0"
pyright = "^1.1"
toml = "^0.10.2"
j2cli = "^0.3.10"
pytest-pyright = "^0.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"